Bug 63539 - Table indexes: content can't be seen, index can't be deleted, index can't be renamed since LO 4.*
Summary: Table indexes: content can't be seen, index can't be deleted, index can't be ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: All All
: medium major
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:4.2.0 target:4.1.2 target:4.0.6
Keywords: regression
: 65605 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-04-15 06:47 UTC by Aldo Fiorentin
Modified: 2013-08-08 17:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
One table with primary-key and unique-index for two fields (2.46 KB, application/vnd.sun.xml.base)
2013-04-21 19:08 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aldo Fiorentin 2013-04-15 06:47:10 UTC
tested v.4.0.2.2 Base (database): saved table indexes can't be seen anymore (tested also v.3.6.6 which works properly)
Comment 1 Robert Großkopf 2013-04-21 19:08:41 UTC
Created attachment 78311 [details]
One table with primary-key and unique-index for two fields

Open the attachment.
Open the table for editing the fields.
Open Tools → Index Design or click the button.
All versions LO 3.* could see the created index, could rename the index and could delete the index.
With LO 4.* you couldn't see the content of the created indexes, could not rename the indexes and could not delete the indexes. You could only create new indexes.
Comment 2 erdebugger 2013-05-15 02:19:47 UTC
Tested v4.0.2 & v4.0.3 with Ubuntu. I can't edit any index.
I only can add new indexes but I can't edit them.
Comment 3 erdebugger 2013-05-15 02:24:54 UTC
(In reply to comment #2)
> Tested v4.0.2 & v4.0.3 with Ubuntu. I can't edit any index.
> I only can add new indexes but I can't edit them.

If I open the database created with LibreOffice 4.0.3 from LibreOffice 3.6.6 I can edit all indexes created before.

In conclusion, v4.* can create indexes but it can't edit or view them.
Comment 4 Julien Nabet 2013-06-10 21:09:14 UTC
On pc Debian x86-64 with 4.0.3 Debian packages, I noticed this workaround:
- create a new index
- remove this last one
- it seems you can edit the existing ones (at least, it's no more disabled/grey)
Comment 5 Robert Großkopf 2013-06-11 11:57:08 UTC
*** Bug 65605 has been marked as a duplicate of this bug. ***
Comment 6 Robert Großkopf 2013-08-08 06:59:02 UTC
Have tested this with the first available LO 4.0.0.0 beta1. The bug appears in this version, but doesn't appear in LO 3.6.6.2. So I will change the version to LO 4.0.0.0 beta1.
Also it's a problem for 32bit- and 64bit-systems. So I have changed the Platform to "All".
The workaround from Julian (https://bugs.freedesktop.org/show_bug.cgi?id=63539#c4) works right. You have only to press the button for creating a new index, the delete the new name and could see the content, edit and remove the older indexes.

I will add Lionel to CC - hope he could help ...
Hello Lionel. Could you have a look? Do you know somebody, who could fix this?
Comment 7 Commit Notification 2013-08-08 17:17:20 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=af53d7a181feaad2f75eeb0900030aa02868e338

fdo#63539 make SvTreeListBox::Select virtual



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2013-08-08 17:27:32 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0a5e941204a9bacf1a695423ab0518cea4a493f2&h=libreoffice-4-1

fdo#63539 make SvTreeListBox::Select virtual


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2013-08-08 17:27:51 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=96c12d1ad73afa7ca18746c62cf0f4edc9a50b99&h=libreoffice-4-0

fdo#63539 make SvTreeListBox::Select virtual


It will be available in LibreOffice 4.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.