fdo#63539 make SvTreeListBox::Select virtual

SvLBox was merged with SvTreeListBox;
SvLBox had a virtual Select() and some derived classes override it.
E.g. dbaui::DbaIndexList.

Change-Id: I82b3718e72db5d320704e1e2871de86abc686441