include/svtools/treelistbox.hxx
@@ -715,7 +715,7 @@ public:
 
     sal_Bool Expand( SvTreeListEntry* pParent );
     sal_Bool Collapse( SvTreeListEntry* pParent );
-    sal_Bool Select( SvTreeListEntry* pEntry, sal_Bool bSelect=sal_True );
+    virtual sal_Bool Select( SvTreeListEntry* pEntry, sal_Bool bSelect=sal_True );
     sal_uLong SelectChildren( SvTreeListEntry* pParent, sal_Bool bSelect );
     virtual void SelectAll( sal_Bool bSelect, sal_Bool bPaint = sal_True );
 
